--- a/DublinBikes/DublinBikes/appsettings.json
+++ b/DublinBikes/DublinBikes/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    //"Context": "Server=(localdb)\\mssqllocaldb;Database=Context-1;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Context": "Server=eu-cdbr-west-03.cleardb.net; Database=heroku_9056830531d4329; Uid=b43a17ed9b61f6; Pwd= 009d6ed2"
+  }
 }
